made seed 6 digits and fixed visibility property of seed box

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,6 +233,10 @@ div.scoreboard {
   display: table-row-group;
 }
 
+.seed-container {
+  visibility: hidden;
+}
+
 .seed-container input {
   vertical-align: middle;
 }
